[package]
name = "templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
codespan-reporting = "0.11.1"
env_logger = "0.9.0"
insta = "1.9.0"
log = "0.4.14"
structopt = "0.3.25"
unicode-segmentation = "1.8.0"
walkdir = "2.3.2"
